Esltilizando o header css

--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    
     <title>iPhone</title>
 </head>
 <body>
     <header>
         <nav class="navigation">
-<a href=""></a>
+            <a href="#"><img src="img/logo.png" alt="logo do iPhone" class="logo"></a>
+        <ul>
+            <li><a href="#">Mac</a></li>
+            <li><a href="#">iPad</a></li>
+            <li><a href="#">iPhone</a></li>
+            <li><a href="#">Watch</a></li>
+            <li><a href="#">AirPods</a></li>
+            <li><a href="#">Só na Apple</a></li>
+            <li><a href="#">Suporte</a></li>
+        </ul>
         </nav>
     </header>
 </body>
