Acionando a main, e criando div

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#">Mac</a></li>
             <li><a href="#">iPad</a></li>
-            <li><a href="#">iPhone</a></li>
+            <li><a href="#" class="check">iPhone</a></li>
             <li><a href="#">Watch</a></li>
             <li><a href="#">AirPods</a></li>
             <li><a href="#">Só na Apple</a></li>
@@ -24,5 +24,33 @@
         </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <div class="main-text">
+                <img src="img/iphone13.png" alt="">
+                <h3>Seu novo super poder.</h3>
+                <p>Chip com velocidade impressionante. Um aumento notável na duração da bateria. E novos recursos de foto e vídeo.<br>
+                 No iPhone 13, você faz coisas que nunca pôde, E ele ainda vem em dois tamanhos. </p>
+                 <h6>A partir de 6.599</h6>
+                 <a href="#" class="btn">Comprar</a>
+                 <div class="text">
+                   <h5>Escolha sua cor favorita:</h5>
+                 </div>
+
+                 <div class="content">
+                    <span id="green"></span>
+                    <span id="pink"></span>
+                    <span id="blue"></span>
+                    <span id="black"></span>
+                    <span id="white"></span>
+                    <span id="red"></span>
+                </div>
+            </div>
+
+            <div class="main img">
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
