--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </header>
     <main>
         <section>
+            <div class="circle"></div>
             <div class="main-text">
                 <img src="img/iphone13.png" alt="">
                 <h3>Seu novo super poder.</h3>
-                <p>Chip com velocidade impressionante. Um aumento notável na duração da bateria. E novos recursos de foto e vídeo.<br>
-                 No iPhone 13, você faz coisas que nunca pôde, E ele ainda vem em dois tamanhos. </p>
+                <p>Chip com velocidade impressionante. Um aumento notável na duração da bateria. <br>E novos recursos de foto e vídeo. No iPhone 13, você faz coisas que nunca pôde. <br>E ele ainda vem em dois tamanhos.</p>
                  <h6>A partir de 6.599</h6>
                  <a href="#" class="btn">Comprar</a>
                  <div class="text">
@@ -38,19 +38,30 @@
                  </div>
 
                  <div class="content">
-                    <span id="green"></span>
-                    <span id="pink"></span>
-                    <span id="blue"></span>
-                    <span id="black"></span>
-                    <span id="white"></span>
-                    <span id="red"></span>
+                    <span id="black" onclick="imgSlider('img/black.png'); circleChange('#192028')"></span>
+                    <span id="blue" onclick="imgSlider('img/blue.png'); circleChange('#225f7e')"></span>
+                    <span id="green" onclick="imgSlider('img/green.png'); circleChange('#384937')"></span>
+                    <span id="white" onclick="imgSlider('img/white.png'); circleChange('#f7f2ee')"></span>
+                    <span id="pink" onclick="imgSlider('img/pink.png');circleChange('#f8ddd6')"></span>
+                    <span id="red" onclick="imgSlider('img/red.png');circleChange('#cf4f68')"></span>
                 </div>
             </div>
 
-            <div class="main img">
-
+            <div class="main-img">
+                <img src="img/green.png" alt="imagem do iphone" id="phone">
             </div>
         </section>
     </main>
+    <script type="text/javascript">
+        /*Função de mudar o celular*/
+        function imgSlider(e){
+            document.querySelector('#phone').src = e;
+        }
+        /*Função de mudar a cor do circulo*/
+        function circleChange(color){
+            const circle = document.querySelector('.circle');
+            circle.style.background = color;
+        }
+    </script>
 </body>
 </html>
