--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                  </div>
 
                  <div class="content">
-                    <span id="black" onclick="imgSlider('img/black.png'); circleChange('#192028')"></span>
-                    <span id="blue" onclick="imgSlider('img/blue.png'); circleChange('#225f7e')"></span>
-                    <span id="green" onclick="imgSlider('img/green.png'); circleChange('#384937')"></span>
-                    <span id="white" onclick="imgSlider('img/white.png'); circleChange('#f7f2ee')"></span>
-                    <span id="pink" onclick="imgSlider('img/pink.png');circleChange('#f8ddd6')"></span>
-                    <span id="red" onclick="imgSlider('img/red.png');circleChange('#cf4f68')"></span>
+                    <span id="black" onclick="imgSlider('img/black.png'); circleColor('#192028')"></span>
+                    <span id="blue" onclick="imgSlider('img/blue.png'); circleColor('#225f7e')"></span>
+                    <span id="green" onclick="imgSlider('img/green.png'); circleColor('#384937')"></span>
+                    <span id="white" onclick="imgSlider('img/white.png'); circleColor('#f7f2ee')"></span>
+                    <span id="pink" onclick="imgSlider('img/pink.png');circleColor('#f8ddd6')"></span>
+                    <span id="red" onclick="imgSlider('img/red.png');circleColor('#cf4f68')"></span>
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
             document.querySelector('#phone').src = e;
         }
         /*Função de mudar a cor do circulo*/
-        function circleChange(color){
+        function circleColor(color){
             const circle = document.querySelector('.circle');
             circle.style.background = color;
         }
